# falke

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: main.rs
api/src/domain/: mod.rs
api/src/domain/app/: mod.rs
api/src/domain/app/handlers/: health_check.rs
api/src/domain/auth/: jwt_validator.rs  mod.rs
api/src/domain/auth/handlers/: mod.rs  sign_in.rs  sign_up.rs  validate_token.rs
api/src/domain/proxies/: mod.rs  socket_manager.rs
api/src/domain/proxies/handlers/: acquire_proxy.rs  mod.rs  proxy.rs  release_proxy.rs  socket.rs
api/src/domain/tunnels/: mod.rs  socket_manager.rs
api/src/domain/tunnels/handlers/: acquire_tunnel.rs  mod.rs  proxy.rs  socket.rs
api/src/infrastructure/: mod.rs  server.rs  templates.rs
api/templates/: 404.html  internal_server_error.html  proxy_client_not_connected.html
certs/: cert.pem  key.pem
cli/: Cargo.toml
cli/src/: main.rs
cli/src/infrastructure/: settings.rs
cli/src/services/: api.rs  api_client.rs  app.rs  auth.rs  credential.rs  mod.rs  proxy.rs  response.rs  settings.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/converter/: json.rs
common/src/dto/: auth.rs  mod.rs  proxy.rs  tunnel.rs
common/src/infrastructure/: db.rs  error.rs  mod.rs  response.rs  settings.rs
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  proxy.rs  tunnel.rs  user.rs  users.rs
microservices/: docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240828_174932_create_user_table.rs  m20240828_174932_create_users_table.rs  m20240831_075624_create_proxy_table.rs  m20240831_075624_create_tunnel_table.rs
reverse_proxy/: Cargo.toml
reverse_proxy/src/: main.rs
reverse_proxy/src/domain/: mod.rs
reverse_proxy/src/domain/proxy/: http.rs  mod.rs  proxy.rs  ws.rs
reverse_proxy/src/domain/proxy/handlers/: http.rs  ws.rs
reverse_proxy/src/infrastructure/: server.rs
subway/: .env  Cargo.toml
subway-cli/: Cargo.toml
subway/src/: config.rs  lib.rs  main.rs
subway/src/domain/: mod.rs
subway/src/domain/app/: health_check.rs  mod.rs
subway/src/infrastructure/: config.rs  db.rs  logging.rs  mod.rs  server.rs
subway_api/: Cargo.toml
subway_api/src/: main.rs
subway_api/src/domain/: mod.rs
subway_api/src/domain/app/: health_check.rs  mod.rs
subway_api/src/domain/auth/: dto.rs  jwt_validator.rs  mod.rs
subway_api/src/domain/auth/handlers/: sign_in.rs  sign_up.rs
subway_api/src/domain/tunnel/: mod.rs
subway_api/src/domain/tunnel/handlers/: mod.rs  start_tunnel.rs
subway_api/src/domain/tunnels/: mod.rs  socket_manager.rs
subway_api/src/domain/tunnels/handlers/: acquire_tunnel.rs  proxy.rs  socket.rs
subway_api/src/infrastructure/: config.rs  error.rs  log.rs  mod.rs  server.rs  settings.rs
subway_cli/: Cargo.toml
subway_cli/src/: main.rs
subway_cli/src/services/: api.rs  mod.rs
