[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
clap = { version = "4.5.16", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
rpassword = "7.3.1"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
dirs = "5.0.1"
