[package]
name = "common"
version = "0.1.0"
edition = "2021"


[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
validator = { version = "0.18.1", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-orm = { version = "1.0.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
url = "2.5.2"
bcrypt = "0.15.1"
reqwest = { version = "0.12.7", features = ["json"] }
