[package]
name = "common"
version = "0.1.0"
edition = "2021"


[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
validator = { version = "0.18.1", features = ["derive"] }
tracing = "0.1.40"
sea-orm = { version = "1.0.0", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite"] }
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
anyhow = "1.0.86"
log = "0.4.22"
