[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = { version = "0.7.5", features = ["macros", "ws"] }
dotenv = "0.15.0"
url = "2.5.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.23.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.12.7", features = ["json"] }
futures-util = "0.3.30"

