[package]
name = "subway_api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
axum = "0.7.5"
dotenv = "0.15.0"
sea-orm = { version = "1.0.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.6"
bcrypt = "0.15.1"
