[package]
name = "subway_api"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
common = { path = "../common" }
axum = { version = "0.7.5", features = ["ws"] }
dotenv = "0.15.0"
sea-orm = { version = "1.0.0", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.6"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
dashmap = "6.0.1"
nanoid = "0.4.0"
futures-util = "0.3.30"
